# fe-be-alignment-analysis

./: .gitattributes  .gitignore  .gitmodules  .replit  AGENTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODEX_ANALYSIS_RESPONSE.md  CONTEXT.md  CONVERSION_COMPLETE.md  FILEMAP.md  LANDING_PAGE_ANALYSIS_REPORT.md  README.md  REPOSITORY_STRUCTURE_FIX.md  SECURITY_FIXES_2025-09-11.md  SUBMODULE_TROUBLESHOOTING.md  SYNC_SETUP.md  WORKFLOW_DEBUG.md  env.example  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  replit.md  requirements-dev.txt  requirements.txt  test-sync.ps1  test-workflow-steps.ps1  workspace.code-workspace
.github/finetune-ERP-frontend-New/: .env.example
.github/legacy_django/: requirements.txt
.github/workflows/: docs.yml  lighthouse.yml  (+4 more)
attached_assets/: Pasted-Perform-a-comprehensive-analysis-of-the-landing-page-implementation-in-this-Finetune-ERP-monorepo-to-1760457132122_1760457132122.txt  Pasted-SECTION-1-CRITICAL-LAYOUT-ALIGNMENT-FIXES--1760460387240_1760460387241.txt  finetune_landing_page_CORRECTED_fixes_1760492827075.txt
backend/: .env.example  Procfile  README.md  agent.md  pre_deploy.py  requirements-test.txt  requirements.txt
docs/: ADMIN_DASHBOARD.md  API_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKEND.md  CI_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  CUSTOMER_GUIDE.md  DATABASE.md  DEPENDENCY_AUDIT.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FRONTEND_FEATURES.md  FRONTEND_GUIDE.md  GETTING_STARTED.md  INTEGRATION_CONTRACT.md  KNOWN_ISSUES.md  PERFORMANCE.md  README.md  RUNBOOK.md  SECURITY.md  SEO_GUIDE.md  STATE_MANAGEMENT.md  TESTING.md  TEST_GUIDE.md  UI_COMPONENTS.md  UI_GUIDE.md  WORKFLOW_GUIDE.md  backend.md  file-structure.md  frontend.md
finetune-ERP-backend-New/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  agent.md  requirements-test.txt  requirements.txt
finetune-ERP-frontend-New/: .env.example  .lfsconfig  CHANGELOG.md  CONTEXT.md  FILE_MAP.md  README.md  agent.md  index.html  jsdoc.config.json  lighthouserc.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vitest.config.js
frontend/: agent.md  vite.config.js
legacy_django/: .gitignore  datadump.json  manage.py
scripts/: generate_references.py
specs/: README.md  openapi.yaml
(+721 files in other folders)
