[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finetune-os"
version = "0.1.0"
description = "Finetune ERP monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
backend = [
    "Django==5.2.5",
    "dj-database-url==2.3.0",
    "django-cors-headers==4.7.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "gunicorn==23.0.0",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "twilio==7.7.1",
    "weasyprint==66.0",
    "whitenoise==6.9.0",
    "psycopg2-binary>=2.9",
    "django-csp==4.0",
]
dev = []
test = [
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "freezegun==1.5.5",
    "black==24.4.2",
]

[tool.black]
line-length = 88
